# opengl-experimenting

./: .gitmodules  CMakeLists.txt  README.md
includes/: glad.c  glad.h
res/shaders/: basic.glsl
src/: Application.cpp  Debug.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
